--- a/portfolio-visualization.cabal
+++ b/portfolio-visualization.cabal
@@ -20,6 +20,7 @@ executable portfolio-visualization
   main-is:             Main.hs
   build-depends:       base >=4.7 && <4.8,
                        diagrams-lib >=1.2.0.3,
-                       diagrams-svg >=1.1.0.1
+                       diagrams-svg >=1.1.0.1,
+                       cassava >=0.4.1.0
   hs-source-dirs:      src/
   default-language:    Haskell2010
