--- a/portfolio-visualization.cabal
+++ b/portfolio-visualization.cabal
@@ -23,6 +23,7 @@ executable portfolio-visualization
                        diagrams-svg >=1.1.0.1,
                        cassava >=0.4.1.0,
                        vector >=0.10.9.1,
-                       bytestring >=0.10.0.2
+                       bytestring >=0.10.0.2,
+                       SVGFonts >=1.4.0.3
   hs-source-dirs:      src/
   default-language:    Haskell2010
